Elevation / Itinerary improvements (#219)
* Minor refactors without changing functionality

* Track & expose total elevation gain and loss when building profile

* Calculate imperial elevations in feet, not yards

* Reformat Itinerary view to add space for total elevation gain and loss

* Refactor itinerary fragments to extract common code

* Populate new elevation gain/loss fields in itinerary

* Rename private variables to remove trailing underscore

* Round max / min of elevation Y axis to nearest 100m / feet

* Update whatsnew according to changes

* Make new strings translatable

* Round axis labels to 10 to make imperial graph nicer