@@ -1,36 +1,55 @@
 package net.cyclestreets.routing;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class ElevationProfile {
-  private List<Elevation> profile_;
-  private int min_;
-  private int max_;
-
-  ElevationProfile() {
-    profile_ = new ArrayList<>();
-    min_ = Integer.MAX_VALUE;
-    max_ = Integer.MIN_VALUE;
-  }
+  private final LinkedList<Elevation> profile = new LinkedList<>();
+  private int min = Integer.MAX_VALUE;
+  private int max = Integer.MIN_VALUE;
+  private int totalElevationGain = 0;
+  private int totalElevationLoss = 0;
 
   void add(List<Elevation> segmentProfile) {
-    int cumulativeDistance = profile_.size() != 0 ? profile_.get(profile_.size() - 1).distance() : 0;
+    int distanceUpToSegmentStart = profile.size() != 0 ? profile.getLast().distance() : 0;
 
     for (Elevation e : segmentProfile) {
-      if ((e.distance() == 0) && (cumulativeDistance != 0))
+      if ((e.distance() == 0) && (distanceUpToSegmentStart != 0))
         continue;
-      profile_.add(new Elevation(e.distance() + cumulativeDistance, e.elevation()));
 
-      min_ = Math.min(min_, e.elevation());
-      max_ = Math.max(max_, e.elevation());
+      addProfileEntry(new Elevation(distanceUpToSegmentStart + e.distance(), e.elevation()));
     }
   }
 
-  public Iterable<Elevation> profile() {
-    return profile_;
+  private void addProfileEntry(Elevation e) {
+    min = Math.min(min, e.elevation());
+    max = Math.max(max, e.elevation());
+
+    if (!profile.isEmpty()) {
+      Elevation last = profile.getLast();
+      int elevationGain = e.elevation() - last.elevation();
+      if (elevationGain > 0) {
+        totalElevationGain += elevationGain;
+      } else {
+        totalElevationLoss -= elevationGain;
+      }
+    }
+
+    profile.add(e);
   }
 
-  public int minimum() { return min_; }
-  public int maximum() { return max_; }
+  public Iterable<Elevation> profile() {
+    return profile;
+  }
+
+  public int totalElevationGain() {
+    return totalElevationGain;
+  }
+
+  public int totalElevationLoss() {
+    return totalElevationLoss;
+  }
+
+  public int minimum() { return min; }
+  public int maximum() { return max; }
 }
